Estilização da página home

--- a/Sites/site_institucional/contato.html
+++ b/Sites/site_institucional/contato.html
@@ -39,9 +39,9 @@
             <div class="grid-contato">
                 <div class="textContato">
                     <h1 class="contateNos">Contate-nos</h1>
-                    <p>Se em algum momento de pesquisa ficou confuso entre em contato com a MIND6 e teremos o prazer em
+                    <p>Se em algum momento de pesquisa ficou confuso, entre em contato com a MIND6 e teremos o prazer em
                         explicar como nós funcionamos. Caso tenha interesse no nosso produto .CONTROLTEC, mas quer ter
-                        um conhecimento mais profundo preencha o formulário abaixo e entramos em contato.</p>
+                        um conhecimento mais aprofundado, preencha o formulário abaixo e entraremos em contato.</p>
 
                     <form action="" id="mensagem">
                         <fieldset>
