--- a/Sites/site_institucional/index.html
+++ b/Sites/site_institucional/index.html
@@ -38,9 +38,14 @@
                 <div class="cardHome">
                     <div class="home-g1">
                         <h1>O ínicio</h1>
-                        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e
-                            vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja
-                            de tipos e os embaralhou para fazer um livro de modelos de tipos.</p>
+                        <p>Com o crescimento exponencial da tecnologia no mundo inteiro, se encaixando em todos os ramos
+                            e segmentos do "negocio", evoluindo cada vez mais rápido de semana em semana, mês a mês e
+                            ano a ano. Nós a MIND6 olhamos para um segmento de suma importancia que não recebe a devida
+                            atenção tecnologica. Seja ela para evolução de ensino e melhor aprendizado ou para
+                            preparação econômica para manuntenção de equipamentos.</p><br>
+                        <p>
+                            Acima citado já é de se perceber, que estamos falando de escolas, ou melhor, instituições de ensino. Nossa equipe se deparou em
+                            diversas más situações em instituições, quando o assunto era computador ou melhor dizendo, aulas de informática. Onde o computador desligava sem aviso, imposibilitando parava de funcionar e ficava jogado sem manutenção</p>
                     </div>
 
                     <div class="home-g1">
@@ -48,8 +53,16 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- <div class="content">
+        <div class="infoProject4" id="vantagens">
+            <div class="project4">
+                <h1 class="title">PARA MAIS INFORMAÇÕES ENTRE EM CONTATO CONOSCO</h1>
+            </div>
+        </div>
+
+        <!-- ==============9============================================== -->
+        <!-- <div class="content">
                 <h1 class="tituloMind6">MIND6 </h1>
                 <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro
                     produto
@@ -83,55 +96,55 @@
             </div>
         </div> -->
 
-            <div class="footer">
-                <div class="footer-content">
-                    <div class="footer-section location">
-                        <img src="Logos/Logo-MIND6.png" alt="Logo MIND6">
-                        <p>
-                            BandTec Digital School <br>
-                            Rua Haddock Lobo, 595 <br>
-                            Cerqueira César <br>
-                            São Paulo - SP
-                        </p>
+        <div class="footer">
+            <div class="footer-content">
+                <div class="footer-section location">
+                    <img src="Logos/Logo-MIND6.png" alt="Logo MIND6">
+                    <p>
+                        BandTec Digital School <br>
+                        Rua Haddock Lobo, 595 <br>
+                        Cerqueira César <br>
+                        São Paulo - SP
+                    </p>
 
-                        <div class="mind">
-                            <p>| BandTec e Equipe <span>MIND6</span> |</p>
-                        </div>
-                    </div>
-
-                    <div class="footer-section redes">
-                        <h1>Siga-nos em Nossas Redes</h1>
-
-                        <div class="redes-social">
-                            <span><i class="fab fa-instagram"></i></span>
-                            <span><i class="fab fa-linkedin-in"></i></span>
-                            <span><i class="fab fa-facebook-f"></i></span>
-                            <span><i class="fab fa-twitter"></i></span>
-                            <span><i class="fab fa-google-plus-g"></i></span>
-                            <span><i class="fab fa-discord"></i></span>
-                        </div>
-                    </div>
-
-                    <div class="footer-section contate">
-                        <h1>Contate-nos</h1>
-                        <p>
-                            Entre em contato com a nossa equipe e peça <br>
-                            seu sistema de monitoramento ou tire suas dúvidas <br>
-                            com nosso atendentes.
-                        </p>
-
-                        <div class="contact">
-                            <span><i class="fas fa-mail-bulk"> Mind6Grupo4@bandtec.com.br</i></span>
-                            <span><i class="fab fa-whatsapp"> (11) 99999-9999</i></span>
-                        </div>
+                    <div class="mind">
+                        <p>| BandTec e Equipe <span>MIND6</span> |</p>
                     </div>
                 </div>
 
-                <div class="footer-bottom">
-                    &copy; BandTec Digital School | Project MIND6 |
-                    Developed and Designed by the MIND6 team
+                <div class="footer-section redes">
+                    <h1>Siga-nos em Nossas Redes</h1>
+
+                    <div class="redes-social">
+                        <span><i class="fab fa-instagram"></i></span>
+                        <span><i class="fab fa-linkedin-in"></i></span>
+                        <span><i class="fab fa-facebook-f"></i></span>
+                        <span><i class="fab fa-twitter"></i></span>
+                        <span><i class="fab fa-google-plus-g"></i></span>
+                        <span><i class="fab fa-discord"></i></span>
+                    </div>
+                </div>
+
+                <div class="footer-section contate">
+                    <h1>Contate-nos</h1>
+                    <p>
+                        Entre em contato com a nossa equipe e peça <br>
+                        seu sistema de monitoramento ou tire suas dúvidas <br>
+                        com nosso atendentes.
+                    </p>
+
+                    <div class="contact">
+                        <span><i class="fas fa-mail-bulk"> Mind6Grupo4@bandtec.com.br</i></span>
+                        <span><i class="fab fa-whatsapp"> (11) 99999-9999</i></span>
+                    </div>
                 </div>
             </div>
+
+            <div class="footer-bottom">
+                &copy; BandTec Digital School | Project MIND6 |
+                Developed and Designed by the MIND6 team
+            </div>
+        </div>
 
 
 
