Finalização de estilização página e home e andamento em responsividade

--- a/Sites/site_institucional/index.html
+++ b/Sites/site_institucional/index.html
@@ -44,8 +44,15 @@
                             atenção tecnologica. Seja ela para evolução de ensino e melhor aprendizado ou para
                             preparação econômica para manuntenção de equipamentos.</p><br>
                         <p>
-                            Acima citado já é de se perceber, que estamos falando de escolas, ou melhor, instituições de ensino. Nossa equipe se deparou em
-                            diversas más situações em instituições, quando o assunto era computador ou melhor dizendo, aulas de informática. Onde o computador desligava sem aviso, imposibilitando parava de funcionar e ficava jogado sem manutenção</p>
+                            Acima citado já é de se perceber, que estamos falando de escolas, ou melhor, instituições de
+                            ensino. Nossa equipe se deparou em
+                            diversas más situações em instituições, quando o assunto era computador ou melhor dizendo,
+                            aulas de informática. Onde o computador desligava sem aviso, parava de funcionar e ficava
+                            jogado sem manutenção e como outro problema maior, a falta de preparação financeira para
+                            comprar novas peças ou outra máquina.</p><br>
+                        <p class="bottom-home">
+                            Então nos a MIND6 criamos e desenvolvemos a .CONTROLTEC para alertar os técnicos antes que a
+                            urgencia aconteça, podendo se preparar para ele. <b>Seja Bem Vindo(a), a MIND6.<b></p>
                     </div>
 
                     <div class="home-g1">
@@ -55,47 +62,42 @@
             </div>
         </div>
 
+
+        <!-- Imagem divisoria -->
         <div class="infoProject4" id="vantagens">
             <div class="project4">
-                <h1 class="title">PARA MAIS INFORMAÇÕES ENTRE EM CONTATO CONOSCO</h1>
+                <div class="CardVant">
+                    <h1>Proporcionamos um serviço mais eficiente, com maior qualidade e velocidade na identificação de
+                        problemas.
+                    </h1>
+                </div>
             </div>
         </div>
 
-        <!-- ==============9============================================== -->
-        <!-- <div class="content">
-                <h1 class="tituloMind6">MIND6 </h1>
-                <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro
-                    produto
-                    o
-                    .ControlTec</p>
-                <div class="control">
-                    <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
-                    <p align=center>Sistema de monitoramento de computadores escolares</p><br><br><br>
-                    <a class="btn-control" href="controlTec.html">Saiba mais...</a>
+        <!-- .CONTROLTEC -->
+        <div id="controltec">
+            <div class="cardcontroltec">
+                <div class="controltec-g1">
+                    <img src="Logos/Logo-DotControlTec.png" alt="">
+                </div>
+                <div class="controltec-g1">
+                    <p>O cubo da nossa logo .CONTROLTEC simboliza o caráter sólido, a estabilidade, sabedoria, verdade e
+                        a perfeição. Qualidades que prezamos na nossa empresa e gostamos de mostrar essa transparencia a
+                        quem nos procura. Os componentes eletronicos dentro do cubo representam conexão e caminhos
+                        solidos com objetividade, essa é nossa relação com o projeto e o cliente que adotamos e
+                        evoluimos.</p><br>
+                    <p>
+                        O nome sugiu por 3 elementos. Começando pelo "." ou no inglês dot, representando centro. O
+                        Control representa controle e equilibrio. O tec vem da tecnologia, que é o núcleo da nossa
+                        empresa. Com essas informações possuimos, o "centro de controle da tecnologia" desenvolvido
+                        como. <b>.CONTROLTEC</b>
+                    </p>
 
                 </div>
             </div>
         </div>
-        <div class="infoProject3">
-            <div class="project3">
-                <h1>Diferencias</h1>
-                <ul>
-                    <li><i class="fa fa-download" aria-hidden="true"></i>
-                        <h3>Conheça</h3>
-                        <p>Adquira nosso produto de Gerenciamento</p>
-                    </li>
-                    <li><i class="fa fa-tools" aria-hidden="true"></i>
-                        <h3>Instale</h3>
-                        <p>Implemente em sua Instituição</p>
-                    </li>
-                    <li><i class="fa fa-globe" aria-hidden="true"></i>
-                        <h3>Descubra</h3>
-                        <p>Tenha em suas mãos, o controle</p>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
 
+        <!-- Footer -->
         <div class="footer">
             <div class="footer-content">
                 <div class="footer-section location">
@@ -154,30 +156,3 @@
 
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
 <script src="menu.js"></script>
-<script>
-    // var contador = 0;
-    // setInterval(function () {
-    //     if (contador == 0) {
-    //         img1.style.background = 'purple';
-    //         img2.style.background = 'yellow';
-    //         img3.style.background = 'cyan';
-
-    //     } else if (contador == 1) {
-    //         img1.style.background = 'yellow';
-    //         img2.style.background = 'cyan';
-    //         img3.style.background = 'purple';
-    //     } else {
-    //         img1.style.background = 'cyan';
-    //         img2.style.background = 'purple';
-    //         img3.style.background = 'yellow';
-
-    //     }
-    //     contador++;
-
-    //     if (contador > 2) {
-    //         contador = 0;
-    //     }
-
-
-    // }, 2000);
-</script>
