--- a/Sites/site_institucional/sobre.html
+++ b/Sites/site_institucional/sobre.html
@@ -119,27 +119,6 @@
       </div>
     </div>
 
-    <!-- <div class="mvv">
-      <div class="missao">
-        <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_jsignqmt.json"  background="transparent"  speed="1"  style="width: 320px; height: 200px;"  loop  autoplay></lottie-player>
-        <h3 class="titulo_mvv">Missão</h3>
-        <p class="txt_mvv">Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</p>
-      </div>
-      <div class="visao">
-        <img src="img/visao.png" alt="">
-        <h3 class="titulo_mvv">Visão</h3>
-        <p class="txt_mvv">
-          Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
-          mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.
-        </p>
-      </div>
-      <div class="valores">
-        <img src="img/valor.png" alt="">
-        <h3 class="titulo_mvv">Valores</h3>
-        <p class="txt_mvv">Precisão, Respeito, Ética, transparência, Paixão, inovação.</p>
-      </div>
-    </div> -->
-
     <section class="container-card">
       <div class="card">
         <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_j12qmy7k.json" background="transparent"
@@ -165,8 +144,8 @@
       </div>
 
       <div class="card">
-        <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_yPKMfX.json" background="transparent"
-          speed="0.8" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+        <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_yPKMfX.json" class="lott" background="transparent"
+          speed="0.8" style="" loop autoplay></lottie-player>
         <div class="read">
           <h1>VALORES</h1>
           <p>
