--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="../css/header.css">
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://www.chartjs.org/dist/2.9.3/Chart.min.js"></script>
+	<script src="https://www.chartjs.org/samples/latest/utils.js"></script>
+	<style>
+        canvas{
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
+        </style>
 
     <title>Visão Máquina</title>
 </head>
@@ -134,7 +143,7 @@
                     <div style="width: 100%; height: 150px; margin-left: 10px;">
                         <span>Média de uso da CPU</span>
                         <div id="container-graficos__div-mediaCpu" class="container-graficos__div-configuracao">
-
+                            <canvas id="grafico_media_cpu"></canvas>
                         </div>
                     </div>
 
