--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -36,20 +36,6 @@
             </div>
         </div>
 
-        <!-- <div class="infoProject2">
-            <div class="project2">
-                <h1>O QUE É A .CONTROLTEC</h1>
-                <p>
-                    A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
-                    objetivos de negócios através da adoção de soluções digital.
-                    Oferecemos a solução <b><i>".ControlTec"</i></b> que veio para facilitar e modernizar as máquinas em
-                    âmbitos estudantis, com foco na utilização do técnico colaborando em suas
-                    tomadas de decisões.
-                </p>
-            </div>
-        </div> -->
-
-
         <section id="controltec">
             <h1>O QUE O É O .CONTROLTEC ?</h1>
             <div class="cards">
@@ -60,7 +46,8 @@
                     <p>
                         A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
                         objetivos de negócios através da adoção de soluções digitais.
-                        Oferecemos a solução <b><a href="controlTec.html">.ControlTec</a></b> que veio para facilitar e modernizar as
+                        Oferecemos a solução <b><a href="controlTec.html">.ControlTec</a></b> que veio para facilitar e
+                        modernizar as
                         máquinas em
                         âmbitos estudantis, com foco na utilização do técnico colaborando em suas
                         tomadas de decisões. Evitando o gasto de tempo e dinheiro sem preparação prévia.
